# SuperSherpa

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sublime/supersherpa/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/assets/model_delivery/: manifest.json
app/src/main/assets/sherpa-onnx-streaming-zipformer-en-2023-06-26/: README.md
app/src/main/java/com/sublime/supersherpa/: MainActivity.kt  (+1 more)
app/src/main/res/color/: voice_bar_action_text.xml
app/src/main/res/drawable/: bg_voice_bar_action.xml  ic_account_box.xml  ic_favorite.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_voice_bar_autorenew_24.xml  ic_voice_bar_mic_24.xml  ic_voice_bar_stop_circle_24.xml
app/src/main/res/layout/: ime_keyboard_compose.xml  ime_keyboard_library.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: SUPERSHERPA_MVP_SPEC_PLAN.md  VOXY_MVP_SPEC_PLAN.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: main_activity.rs  recognize.rs
transcribe-rs/: Cargo.toml
transcribe-rs/examples/: transcribe.rs
transcribe-rs/src/: android_bridge.rs  lib.rs
transcribe-rs/src/android_bridge/: mod.rs  model.rs  notifications.rs  partial_updates.rs  recording.rs  state.rs  text_processing.rs
transcribe-rs/src/engines/: mod.rs  whisper.rs
transcribe-rs/tests/: parakeet.rs  whisper.rs
(+118 files in other folders)
